--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "webpack": "webpack",
+    "dev": "webpack-dev-server --hot"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +21,11 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "bootstrap": "^4.4.1",
+    "querystring": "^0.2.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "util": "^0.12.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
